src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/C4A62.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram C4A62 {
	class A {
		String a;
	}
}