src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3004.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram CD4AC3004 {

	class A {
		final String a;
		public String b;
		private String c;
		protected String d;
		static String e;
		final / String f;
		/ public int g;
		final / public int h;
	}
}